apps/3x-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 3x-ui
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 3x-ui
  template:
    metadata:
      labels:
        app: 3x-ui
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: 3x-ui
          image: ghcr.io/mhsanaei/3x-ui:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          ports:
            - containerPort: 2053
              name: web
            - containerPort: 26789
              name: vpn-tcp
              protocol: TCP
            - containerPort: 26789
              name: vpn-udp
              protocol: UDP
          volumeMounts:
            - name: db
              mountPath: /etc/x-ui/
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: 3x-ui-db
