apps/3x-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: x-ui
  namespace: apps
spec:
  type: LoadBalancer
  selector:
    app: 3x-ui
  ports:
    - name: web
      protocol: TCP
      port: 2053
      targetPort: 2053
    - name: vpn-tcp
      protocol: TCP
      port: 26789
      targetPort: 26789
    - name: vpn-udp
      protocol: UDP
      port: 26789
      targetPort: 26789
