apps/3x-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: x-ui
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: 3x.a-tishbek.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: x-ui
                port:
                  number: 2053
  tls:
    - hosts:
        - 3x.a-tishbek.info
      secretName: 3x-ui-tls
